--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
    "name": "jsonschema-ts",
    "module": "src/index.ts",
+   "version": "0.1.0",
    "publishConfig": {
       "access": "public"
    },
