--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
       "ajv": "^8.17.1",
       "bun-types": "^1.2.9",
       "expect-type": "^1.2.1",
+      "json-schema-library": "^10.0.0",
       "tsup": "^8.4.0"
    },
    "peerDependencies": {
