Refactor schema types to include coercion and validation. Added coerce methods for string, number, array, and object schemas. Updated tests to cover new coercion functionality and improved optional property handling in schemas.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
       "test:types": "tsc --noEmit",
       "test": "bun test:types && bun test:unit",
       "build": "tsup",
+      "fetch": "npx giget gh:json-schema-org/JSON-Schema-Test-Suite/tests src/test/spec/lib",
       "prepublishOnly": "bun test && bun run build"
    },
    "devDependencies": {
