--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
    "module": "dist/lib/index.js",
    "types": "dist/lib/index.d.ts",
    "version": "0.2.1",
-   "description": "A simple and lightweight (5.5kb gzipped) TypeScript library for defining and validating JSON schemas with static type inference.",
+   "description": "A simple and lightweight (<6kb gzipped) TypeScript library for defining and validating JSON schemas with static type inference.",
    "repository": {
       "type": "git",
       "url": "git+https://github.com/dswbx/simple-jsonschema-ts.git"
