--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-   "name": "simple-jsonschema-ts",
+   "name": "ts-jsonv",
    "main": "dist/lib/index.js",
    "module": "dist/lib/index.js",
    "types": "dist/lib/index.d.ts",
-   "version": "0.2.1",
+   "version": "0.0.1",
    "sideEffects": false,
    "description": "A simple, lightweight (<6kb gzipped) and dependency-free TypeScript library for defining and validating JSON schemas with static type inference.",
    "repository": {
@@ -72,6 +72,8 @@
    "keywords": [
       "json",
       "schema",
+      "validator",
+      "validate",
       "jsonschema",
       "json-schema",
       "typescript"
