fix double validation and types

--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
          "src/hono/index.ts"
       ],
       "external": [
-         "hono"
+         "hono",
+         "jsonv-ts"
       ],
       "format": "esm",
       "platform": "neutral",
