--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
    "main": "dist/lib/index.js",
    "module": "dist/lib/index.js",
    "types": "dist/lib/index.d.ts",
-   "version": "0.0.1",
+   "version": "0.0.3",
    "sideEffects": false,
+   "typesVersions": {
+      "*": {
+         "hono": [
+            "./dist/hono/index.d.ts"
+         ]
+      }
+   },
    "description": "A simple, lightweight (<6kb gzipped) and dependency-free TypeScript library for defining and validating JSON schemas with static type inference.",
    "repository": {
       "type": "git",
