--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
       "hono": "^4.7.9",
       "json-schema-library": "^10.0.0",
       "mitata": "^1.0.34",
+      "openapi-types": "^12.1.3",
       "picocolors": "^1.1.1",
       "tinybench": "^4.0.1",
       "tsup": "^8.4.0"
