--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
    "main": "dist/lib/index.js",
    "module": "dist/lib/index.js",
    "types": "dist/lib/index.d.ts",
-   "version": "0.0.13",
+   "version": "0.0.14",
    "sideEffects": false,
    "typesVersions": {
       "*": {
@@ -12,7 +12,7 @@
          ]
       }
    },
-   "description": "A simple, lightweight (<6kb gzipped) and dependency-free TypeScript library for defining and validating JSON schemas with static type inference.",
+   "description": "A simple, lightweight (<6kb gzipped) and dependency-free TypeScript library for defining and validating JSON schemas with static type inference. It also provides Hono middleware for OpenAPI generation and validation.",
    "repository": {
       "type": "git",
       "url": "git+https://github.com/dswbx/jsonv-ts.git"
@@ -90,6 +90,9 @@
       "validate",
       "jsonschema",
       "json-schema",
+      "hono",
+      "openapi",
+      "swagger",
       "typescript"
    ]
 }
