--- a/package.json
+++ b/package.json
@@ -3,16 +3,9 @@
    "main": "dist/lib/index.js",
    "module": "dist/lib/index.js",
    "types": "dist/lib/index.d.ts",
-   "version": "0.0.14",
+   "version": "0.0.15-alpha.0",
    "sideEffects": false,
-   "typesVersions": {
-      "*": {
-         "hono": [
-            "./dist/hono/index.d.ts"
-         ]
-      }
-   },
-   "description": "A simple, lightweight (<6kb gzipped) and dependency-free TypeScript library for defining and validating JSON schemas with static type inference. It also provides Hono middleware for OpenAPI generation and validation.",
+   "description": "A simple, lightweight and dependency-free TypeScript library for defining and validating JSON schemas with static type inference. Includes Hono middleware for validation, OpenAPI generation, and MCP server implementation.",
    "repository": {
       "type": "git",
       "url": "git+https://github.com/dswbx/jsonv-ts.git"
@@ -25,6 +18,7 @@
    "scripts": {
       "test:unit": "bun test --bail",
       "types": "tsc --noEmit",
+      "build:types": "tsc --emitDeclarationOnly",
       "test": "bun types && bun test:unit && bun test:spec",
       "test:spec": "clear && bun run src/test/spec/run.ts",
       "build": "tsup",
@@ -59,12 +53,27 @@
       "./hono": {
          "import": "./dist/hono/index.js",
          "types": "./dist/hono/index.d.ts"
+      },
+      "./mcp": {
+         "import": "./dist/mcp/index.js",
+         "types": "./dist/mcp/index.d.ts"
+      }
+   },
+   "typesVersions": {
+      "*": {
+         "hono": [
+            "./dist/hono/index.d.ts"
+         ],
+         "mcp": [
+            "./dist/mcp/index.d.ts"
+         ]
       }
    },
    "tsup": {
       "entry": [
          "src/lib/index.ts",
-         "src/hono/index.ts"
+         "src/hono/index.ts",
+         "src/mcp/index.ts"
       ],
       "external": [
          "hono",
